* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release